fix toggle menu overlap nav bar

--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -23,7 +23,7 @@ $breakpoint argument choices:
 */
 
 @mixin respond($breakpoint) {
-    @media (max-width: 42.5em) { //16px * 42.5 = 600px 
+    @media (max-width: 40em) { //16px * 40 = 640px 
     @if $breakpoint == phone {
         @content;
         }
