--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   background-image: url(../../assets/img/aerial-beach.jpg);
   background-size: cover;
-  background-position: top;
+  background-position: center;
   .Intro {
     color: $white;
     display: block;
