--- a/src/components/Header/NavBar.module.scss
+++ b/src/components/Header/NavBar.module.scss
@@ -2,14 +2,14 @@
 @import "../../assets//scss/mixins";
 
 .NavBar {
-  background-color: $white;
   box-shadow: $shadow;
   display: block;
   height: 7rem;
   padding: 0 10rem;
   position: fixed;
   width: 100%;
-  z-index: 999 !important;
+  z-index: 9999 !important;
+  background-color: $white;
   @include respond(tab-land) {
     height: 8rem;
     padding: 0 2rem;
@@ -18,7 +18,6 @@
     height: 10rem;
   }
   @include respond(phone) {
-    position: relative;
     height: 12rem;
     padding: 0 5rem;
     Button {
